@@ -1933,6 +1933,19 @@ static const canon_cap_t canon_model_capabilities[] =
     NULL,
     NULL
   },
+  { /* Canon MULTIPASS MP240 */
+    "PIXMA MP240", 3,          /*model, model_id*/
+    842, 17*72,       /* max paper width and height */
+    10, 10, 15, 15,    /*border_left, border_right, border_top, border_bottom */
+    &canon_MULTIPASS_MP250_slotlist, /* these models only have a rear tray. Also uses CAP_T  */
+    CANON_CAP_STD0|CANON_CAP_px|CANON_CAP_P|CANON_CAP_I|CANON_CAP_T,0,control_cmd_PIXMA_iP2700,  /*features */
+    &canon_MULTIPASS_MP240_modelist,
+    &canon_MULTIPASS_MP240_paperlist,
+    NULL,
+    NULL,
+    NULL,
+    iP4500_channel_order
+  },
   { /* Canon MULTIPASS MP250 */
     "PIXMA MP250", 3,          /*model, model_id*/
     842, 17*72,       /* max paper width and height */
