@@ -304,6 +304,8 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA iP9910 (EXPERIMENTAL)
        Canon PIXMA MP140  (EXPERIMENTAL)
        Canon PIXMA MP190  (EXPERIMENTAL)
+       Canon PIXMA MP210  (EXPERIMENTAL)
+       Canon PIXMA MP240  (EXPERIMENTAL)
        Canon PIXMA MP375R
        Canon PIXMA MP470  (EXPERIMENTAL)
        Canon PIXMA MP490  (EXPERIMENTAL)
